# ppt

./: .gitignore  CHANGELOG.md  Dockerfile  MIGRATION.md  PROJECT_STRUCTURE.md  README copy.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  app.py  azure-pipelines.yml  package.json  pyproject.toml  requirements.txt
html/generator/: __init__.py  html_generator.py  utils.py
html/saver/: html_save.py
html/src/html_generation/: __init__.py
html/tests/: test_html_mode.py
html/tests/cases/: test_1.json  test_10.json  test_4.json  test_5.json  test_6.json  test_7.json  test_companyanalyze_toyota.json
ppt/generator/: pres_generator.py  slide_generate.py  utils.py
ppt/prompt/: normal_template_prompt.py
ppt/resources/: normal_template_info.json  reference_template_info.json  title_template_info.json
ppt/saver/: pres_save.py
ppt/tests/: test_insert.py  test_template_info.py
resources/: chart_template_info.json  smbc_template_new.pptx
shared/: __init__.py
shared/api/: generate_schema.py  routes_async.py  task_manager.py
shared/auth/: __init__.py  auth.py  test_auth_script.py
shared/config/: __init__.py  settings.py
shared/db/: db.py  pg_metadata.py
shared/llm/: llm.py
shared/logging/: __init__.py  logging.py
shared/services/: pg_metadata.py
src/: __init__.py  logging.py
src/api/: generate_schema.py  routes_async.py  routes_generate.py
src/common/: auth.py
src/prompts/: html_slide_generator.py
src/services/: content_parser.py  db.py  file_saver.py  html_slide_generator.py  llm.py  pg_metadata.py  pptx_converter.py  presentation_pipeline.py
src/workflows/: __init__.py  presentation_workflow.py
tests/: test.http  test_TemplateInfo.py  test_auth_script.py  test_html_mode.py  test_insert.py  test_workflow.py
tests/tests_case/: test_2.json  test_3.json  test_8.json  test_9.json  test_myassistant_invest.json
(+33 files in other folders)
